--- a/model/templates/model/event_list.html
+++ b/model/templates/model/event_list.html
@@ -1,11 +1,6 @@
-<html>
-    <head>
-        <title>SamboHub</title>
-    </head>
-    <body>
-    <div>
-    	<h1>Список соревнований: </h1>
-    </div>
+{% extends "index.html" %}
+
+{% block application %}
     {% for event in events %}
         <div>
             <h1><a href="">{{ event.title }}</a></h1>
@@ -13,6 +8,4 @@
             <p>Место проведения: {{ event.club }}</p>
         </div>
     {% endfor %}
-    </body>
-</html>
-
+{% endblock %}
