--- a/model/templates/model/event_list.html
+++ b/model/templates/model/event_list.html
@@ -1,6 +1,11 @@
 {% extends "index.html" %}
 
 {% block application %}
+
+    <form action="" method="get">
+        {{form.as_p}}	
+        <input type="submit" name="Find">
+    </form>
     {% for event in events %}
         <div>
             <h1><a href="">{{ event.title }}</a></h1>
