--- a/model/templates/model/post_list.html
+++ b/model/templates/model/post_list.html
@@ -1,21 +1,98 @@
 {% extends "index.html" %}
-
 {% block application %}
-            <div>
-                <h1><a href="/model/register/">Register Here</a></h1>
-                <h1><a href="/model/login/">Login</a></h1>
-                <h1><a href="/model/club_list/">Clubs</a></h1>
-                <h1><a href="/model/event_list/">Events</a></h1>
-               
-            </div>
-            <div> {% if user.is_authenticated %}
-                <h1>SamboHub says... hello {{ user.username }}!</h1>
-                {% else %}
-                <h1>SamboHub says... hello world!</h1>
-            {% endif %}
-            </div>
+{% load static %}           
+<div align="center" >
+    <h1>  Все о самбо в Москве!!! </h1>
+    <br \>
+</div>
+
+<div class="site-index">
+
+    <div class="body-content">
         
-   
+
+        <div class="row">
+            <div class="col-md-4" style="margin-bottom: 25px;">
+                <span class="glyphicon glyphicon-education text-center" style="display: block; font-size: 50px;"></span>
+                <h4 class="text-center">Вся информация&nbsp;о клубах самбо</h4>
+                <p class="text-center" style="font-style: italic;">Все адреса, телефоны и комментарии реальных людей.</p>
+            </div>
+            
+            <div class="col-md-4" style="margin-bottom: 25px;">
+                <span class="glyphicon glyphicon-calendar text-center" style="display: block; font-size: 50px;"></span>
+                <h4 class="text-center">Расписание соревнований по самбо</h4>
+                <p class="text-center" style="font-style: italic;">Получите полный список соревнований и мероприятий.</p>
+            </div>
+
+
+            <div class="col-md-4" style="margin-bottom: 25px;">
+                <span class="glyphicon glyphicon-phone text-center" style="display: block; font-size: 50px;"></span>
+                <h4 class="text-center">Доступ с&nbsp;любого устройства</h4>
+                <p class="text-center" style="font-style: italic;">Все возможности доступны при посещении сайта с&nbsp;любого вашего устройства, достаточно лишь установить современный браузер.</p>
+            </div>
+        </div>
+
+        <button class="btn btn-primary " onClick="alert('You clicked the button using Javascript.');">
+            Click Me
+        </button>
+        <div id="msg">Hello</div>
+
+        <div class="row">
+
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" id="panel-title">Подробнее о ...</h3>
+                    </div>
+                    <div class="list-group">
+                        <a class="list-group-item" href="/site/online-course">Информация об онлайн </a>                        <a class="list-group-item" href="/site/faq">Часто задаваемые вопросы</a>                        <a class="list-group-item" href="/comment">Отзывы</a>                                            </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" id="panel-title">Возникли вопросы?</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>Вы можете задать любой вопрос о работе сайта или сообщить о&nbsp;найденной ошибке.</p>
+                        <a class="btn btn-primary btn-block" id="about-btn" href="#">Задать вопрос</a>                    </div>
+                </div>
+            </div>
+
+        </div>
+        <button id="about-btn"> Click Me - I'm Javascript on Speed</button>
+        
+    </div>
+
+</div>
+    
+
+
+<div class="container">          
+  <div class="row">
+    <div class="col-md-4">
+      <a href="#" class="thumbnail">   
+        <img src="{% static 'images/logo.png' %}" style="width:150px;height:150px">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="ava.png" class="thumbnail">
+        
+        <img src="{% static 'images/logo.png' %}" style="width:150px;height:150px">
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="cinqueterre.jpg" class="thumbnail">   
+        <img src="{% static 'images/logo.png' %}" style="width:150px;height:150px">
+      </a>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
     {% if user.is_authenticated %}
 <a href="/model/restricted/">Restricted Page</a><br />
